Hibernate Database Support (#78)
Co-authored-by: AndHager <andreas.hager@aisec.fraunhofer.de>